# talks

./: LICENSE  README.md
2019-Monadic-Party/: MassivTalk.cabal  README.md  package.yaml  stack.yaml
2019-Monadic-Party/app/: Main.hs
2019-Monadic-Party/bench/: Integral.hs  Intro.hs
2019-Monadic-Party/src/MassivTalk/: Integral.hs
2019-Monadic-Party/src/MassivTalk/Day1/: Intro00.hs  Intro01_Representations.hs  Intro02_Index.hs  Intro03_DelayedVsManifest.hs  Intro04_Slicing.hs  Intro05_Monadic.hs  Intro06_Mutable.hs  Intro07_Computation.hs  Intro08_Random.hs  Intro09_Stencil.hs
2020-HaskellerZ/Color/: Adaptation.ipynb  CHANGELOG.md  Color-Demo.cabal  ColorSpace.ipynb  Illuminant.ipynb  Intro.ipynb  PlanckianLocus (copy).ipynb  PlanckianLocus.ipynb  README.md  stack.yaml
2020-HaskellerZ/Color/Jupyter/: Adaptation.ipynb  Alternative.ipynb  ColorModel.ipynb  ColorSpace.ipynb  HSV.ipynb  Hip.ipynb
2020-HaskellerZ/Color/src/Graphics/Color/: Demo.hs
2020-HaskellerZ/Color/tests/: Main.hs
2021-HaskellExchange/: outline.md
2021-HaskellExchange/arrays-that-do-not-exist/: ArraysThatDontExist.ipynb  CHANGELOG.md  README.md  arrays-that-do-not-exist.cabal  common.html  massiv-seq-vs-fork-vs-async-vs-pooled-vs-streamly.html  massiv-seq-vs-fork-vs-async-vs-pooled.html  massiv-seq-vs-fork-vs-async.html  massiv-seq-vs-fork.html  massiv-seq-vs-par-vs-pooled.html  massiv-seq-vs-par-vs-rpar.html  naive.html  stack.yaml  vector-massiv.html
2021-HaskellExchange/arrays-that-do-not-exist/bench/: Bench.hs
2021-HaskellExchange/arrays-that-do-not-exist/src/: Common.hs  Helpers.hs  Integral.hs  Parallel.hs
2021-HaskellerZ/random/: new-random-interface.slides.html
2021-HaskellerZ/random/random-demo/: CHANGELOG.md  README.md  random-demo.cabal  stack.yaml
2021-HaskellerZ/random/random-ihaskell/: new-random-interface.ipynb  random-ihaskell.cabal  stack.yaml
2021-HaskellerZ/random/random-ihaskell/src/: Lib.hs
2023-Monadic-Warsaw/: Abstract.md
2023-Monadic-Warsaw/ledger/: Base.hs  CHANGELOG.md  LICENSE  README.md  Slides.ipynb  ledger.cabal
2023-Monadic-Warsaw/ledger/src/: Base.hs  Byron.hs  Coin.hs  Core.hs  CoreInter.hs  Hash.hs  KeyHash.hs  KeyHashPlain.hs  Mary.hs  Proxy.hs  Shelley.hs  TxCerts.hs
2025-Boulder-Haskell/: new-random-interface.slides.html
2025-Boulder-Haskell/random/random-ihaskell/: README.md  new-random-interface.ipynb  random-ihaskell.cabal  stack.yaml
2025-Ledger-Watercooler/: new-random-interface.slides.html
2025-Ledger-Watercooler/random/random-ihaskell/: CHANGELOG.md  new-random-interface.ipynb
2025-Ledger-Watercooler/random/random-ihaskell/src/: Lib.hs
