name:                Color-Demo
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/Color-Demo#readme>
homepage:            https://github.com/lehins/Color-Demo
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2020 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Color.Demo

  other-modules:
  build-depends:       Color
                     , JuicyPixels
                     , base            >= 4.8 && < 5
                     , hip
                     , hvega
                     , ihaskell
                     , ihaskell-hip
                     , massiv
                     , massiv-io

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/lehins/Color-Demo
