name:                arrays-that-do-not-exist
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/arrays-that-do-not-exist#readme>
homepage:            https://github.com/lehins/arrays-that-do-not-exist
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2021 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 9.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Common
                     , Integral
                     , Parallel
                     , Helpers

  other-modules:
  build-depends:       base >= 4.8 && < 5
                     , bytestring
                     , async
                     , deepseq
                     , massiv
                     , massiv-io
                     , scheduler
                     , parallel
                     , streamly >= 0.8
                     , ihaskell
                     , unliftio
                     , vector
                     , vector-strategies

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints


-- executable arrays-that-do-not-exist
--   main-is: Main.hs
--   other-modules:
--       Paths_arrays_that_do_not_exist
--   hs-source-dirs:     app
--   ghc-options:        -Wall
--                       -Wincomplete-record-updates
--                       -Wincomplete-uni-patterns
--                       -Wredundant-constraints
--                       -O2
--                       -threaded
--                       -rtsopts
--                       -with-rtsopts=-N
--   build-depends:      base
--                     , arrays-that-do-not-exist
--   default-language: Haskell2010

-- test-suite doctests
--   type:             exitcode-stdio-1.0
--   hs-source-dirs:   tests
--   main-is:          doctests.hs
--   build-depends: base
--                , doctest >=0.15
--                , arrays-that-do-not-exist
--   default-language:    Haskell2010
--   ghc-options:        -Wall
--                       -Wincomplete-record-updates
--                       -Wincomplete-uni-patterns
--                       -Wredundant-constraints
--                       -threaded

-- test-suite tests
--   type:               exitcode-stdio-1.0
--   hs-source-dirs:     tests
--   main-is:            Main.hs
--   other-modules:      Common
--                     , LibSpec
--                     , Spec
--   build-depends:      base             >= 4.8 && < 5
--                     , arrays-that-do-not-exist
--                     , hspec
--                     , QuickCheck

--   default-language:   Haskell2010
--   ghc-options:        -Wall
--                       -Wincomplete-record-updates
--                       -Wincomplete-uni-patterns
--                       -Wredundant-constraints
--                       -fno-warn-orphans
--                       -threaded
--                       -with-rtsopts=-N2

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , massiv
                     , parallel
                     , arrays-that-do-not-exist
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/talks
  subdir: 2021-HaskellExchange/arrays-that-do-not-exist
