name:                random-ihaskell
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/random-ihaskell#readme>
homepage:            https://github.com/lehins/random-ihaskell
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2021 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 8.4.3
                   , GHC == 8.4.4
                   , GHC == 8.6.3
                   , GHC == 8.6.4
                   , GHC == 8.6.5
                   , GHC == 8.8.1
                   , GHC == 8.8.2
                   , GHC == 8.10.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib

  other-modules:
  build-depends:       base >= 4.8 && < 5
                     , async
                     , bytestring
                     , mtl
                     , mwc-random >= 0.15
                     , random
                     , serialise
                     , transformers
                     , vector
                     , ihaskell

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/lehins/random-ihaskell
